สร้างโดยใช้ Colaboratory

--- a/ML_Practice1_Regression_6610422004.ipynb
+++ b/ML_Practice1_Regression_6610422004.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYl4VXhKSJFp6cxSK4aK9E",
+      "authorship_tag": "ABX9TyNEgMe4aZnjPWqvvn0igGIU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1255,23 +1255,16 @@
         "#Prediction\n",
         "y_predict = lin_reg.predict(x_test)\n",
         "print(f\"x_test.shape = {x_test.shape}\")\n",
-        "print(f\"y_predict = {y_predict}\")\n",
-        "\n",
-        "\"\"\"Deploy\"\"\"\n",
-        "print(\"Deploy\")\n",
-        "pickle.dump(lin_reg, open('ml_6610422004.sav','wb') )\n",
-        "from google.colab import files\n",
-        "files.download('ml_6610422004.sav')"
+        "print(f\"y_predict = {y_predict}\")\n"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 590
+          "base_uri": "https://localhost:8080/"
         },
         "id": "p5qBcUW3daTR",
-        "outputId": "8b1107ce-98f4-42f3-daba-02e0f4f0c55a"
+        "outputId": "48d30c1a-a116-4114-8798-7719564fb48e"
       },
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1308,7 +1301,65 @@
             "  2971774.44221851  7093653.99925703  4418061.7711239   4577913.07853262\n",
             "  6542179.32091921  3322929.37680988  4620712.65928556  3364236.62346779\n",
             "  7400967.88555256  5138942.23888226  4058811.42233283  4972825.57184573\n",
-            "  6367950.02587764]\n",
+            "  6367950.02587764]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# หา MSE\n",
+        "from sklearn.metrics import mean_squared_error, r2_score\n",
+        "mean_squared_error(y_test, y_predict)\n",
+        "print(f\"MSE = {mean_squared_error(y_test, y_predict)}\")\n",
+        "\n",
+        "# print(f\"y.shape = {y.shape}\")\n",
+        "# print(f\"y_predict.shape = {y_predict.shape}\")\n",
+        "# print(f\"y_train.shape = {y_train.shape}\")\n",
+        "# print(f\"y_test.shape = {y_test.shape}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-3XTRoeEdudi",
+        "outputId": "aa5339f1-ab43-4159-cebc-978ed33fa087"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MSE = 986041803890.0265\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"Deploy\"\"\"\n",
+        "print(\"Deploy\")\n",
+        "pickle.dump(lin_reg, open('ml_6610422004.sav','wb') )\n",
+        "from google.colab import files\n",
+        "files.download('ml_6610422004.sav')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "id": "KMPMCHFQunMI",
+        "outputId": "9aa422f2-f61b-44f4-c161-57ca29612a09"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "Deploy\n"
           ]
         },
@@ -1371,7 +1422,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_15f3fa42-27fe-4b10-b2d0-32b72cc9f1cc\", \"ml_6610422004.sav\", 595)"
+              "download(\"download_5008e4d6-5c5f-4730-8e56-a509c2f42a2b\", \"ml_6610422004.sav\", 595)"
             ]
           },
           "metadata": {}
@@ -1380,38 +1431,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# หา MSE\n",
-        "from sklearn.metrics import mean_squared_error, r2_score\n",
-        "\n",
-        "print(f\"y.shape = {y.shape}\")\n",
-        "print(f\"y_predict.shape = {y_predict.shape}\")\n",
-        "print(f\"y_train.shape = {y_train.shape}\")\n",
-        "print(f\"y_test.shape = {y_test.shape}\")\n",
-        "mean_squared_error(y_test, y_predict)\n",
-        "print(f\"MSE = {mean_squared_error(y_test, y_predict)}\")"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-3XTRoeEdudi",
-        "outputId": "6c7952c2-e173-46a2-9e4a-730338f16bd4"
+        "id": "985zLZuQuqww"
       },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "y.shape = (545,)\n",
-            "y_predict.shape = (109,)\n",
-            "y_train.shape = (436,)\n",
-            "y_test.shape = (109,)\n",
-            "MSE = 986041803890.0265\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
